--- a/src/main/resources/templates/payment/addPayment.html
+++ b/src/main/resources/templates/payment/addPayment.html
@@ -9,7 +9,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 <link data-th-href="@{/css/addServiceTypeCss.css}" media="all" rel="stylesheet" type="text/css" />
 
-<div class="container-fluid  form-Border" id="topicBack" >
+<div class="container-fluid    " id="topicBack" >
   <div class="row text-left " >
     <div class="col" >
       <a class="btn" id="btnHome" href="/home" >
@@ -22,7 +22,7 @@
       </a >
     </div >
     <div class="col" id="topic" >
-      <h4 class="text-light text-center" >
+      <h4 class="text-center" >
         <strong >
                     <span
                           data-th-text="${addStatus==false?'New Service Type Add':'Update Service Type Details'}" ></span >
@@ -85,7 +85,7 @@
       <input type="hidden" data-th-field="*{liveDead}" >
       <input type="hidden" data-th-field="*{code}" >
       <input type="hidden" data-th-field="*{serviceType}" >
-      <input type="hidden" data-th-name="${'paymentStatus'}"  data-th-value="${'PAID'}">
+      <input type="hidden" data-th-name="${'paymentStatus'}" data-th-value="${'PAID'}" >
       <!--Amount-->
       <div class="form-row text-right" >
         <div class="col-md-4" >
@@ -219,7 +219,7 @@
           <div class="col-md-6 " >
             <div class="form-row text-right" >
               <div class="col-md-4" >
-                <label class="control-label" for="bankName" >Bank Name Tendered :</label >
+                <label class="control-label" for="bankName" >Bank Name :</label >
               </div >
               <div class="col-md-8" >
                 <input id="bankName" data-th-field="*{bankName}"
@@ -255,10 +255,16 @@
       </div >
       <!--Button-->
       <div class="form-group col-md-12 col-sm-12 text-center flex-column " >
+        <!--Back Button-->
+        <a class="btn btn-dark" tabindex="10" href="/payment" >
+          <i class="fas fa-arrow-circle-left" style="font-size: 20px" ></i >&nbsp;&nbsp;Back
+        </a >
+        <!--save button-->
         <button class="btn btn-success" type="submit" tabindex="21" >
           <i class="fa fa-save " style="font-size: 20px" ></i >&nbsp; &nbsp;<span id="submit"
                                                                                   data-th-text="${'Save'}" ></span >
         </button >
+        <!--reset button-->
         <button class="btn btn-warning ml-5" type="reset" tabindex="9" >
           <i class="far fa-times-circle" style="font-size: 20px" ></i >&nbsp;&nbsp;Cancel
         </button >
@@ -307,7 +313,12 @@
     function discountRatio() {
         let discountRatio = parseFloat($("#discountRatio").find('option:selected').text());
         let total = parseFloat($("#total").val());
-        let discountAmount = total * discountRatio / 100;
+        let discountAmount;
+        if (discountRatio !== 0) {
+            discountAmount = total * discountRatio / 100;
+        } else {
+            discountAmount = 0
+        }
         $("#totalAmount").val(total - discountAmount);
         $("#discountAmount").val(discountAmount);
     }
