--- a/src/main/resources/templates/vehicleServiceStation/addVehicleServiceStation.html
+++ b/src/main/resources/templates/vehicleServiceStation/addVehicleServiceStation.html
@@ -8,8 +8,8 @@
 <body >
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 <!--Heading Area-->
-<div class="container-fluid form-Border" id="topicBack" >
-  <div class="row text-center formManagement border-info" >
+<div class="container-fluid   " id="topicBack" >
+  <div class="row text-center   " >
     <!--ViewList Button-->
     <div class="col text-left" >
       <a href="/customer" class="btn" id="btnView" tabindex="1" >
@@ -65,7 +65,7 @@
 </div >
 
 <!--Form Content-->
-<div class="container-fluid formBorder text-center" >
+<div class="container-fluid     text-center" >
   <div class="row" >
     <div class="col-sm-12 flex-column " >
       <form id="form" class="form-horizontal" data-th-action="${'/vehicleServiceStationProcess/save'}"
@@ -87,7 +87,7 @@
                 </thead >
                 <tbody >
                 <tr data-th-each="serviceTypeParameterVehicle, index : ${vehicle.serviceTypeParameterVehicles}" >
-                  <td data-th-text="${index.index}" >
+                  <td data-th-text="${index.count}" >
                   </td >
                   <td >
                     <input type="text" class="form-control"
@@ -132,7 +132,7 @@
           <!--Button-->
           <div class="form-group col-md-12 col-sm-12 text-center flex-column " >
             <!--Back Button-->
-            <a class="btn btn-dark" tabindex="10" href="/customer" >
+            <a class="btn btn-dark" tabindex="10" href="/vehicleServiceStationProcess" >
               <i class="fas fa-arrow-circle-left" style="font-size: 20px" ></i >&nbsp;&nbsp;Back
             </a >
             <!--Save Button-->
