--- a/src/main/resources/templates/customer/customer.html
+++ b/src/main/resources/templates/customer/customer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"  >
 <head  data-th-replace="~{fragments/header :: headerFragment}">
     <link  data-th-href="@{/css/customerCss.css}" media="all" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
@@ -8,8 +8,8 @@
 <body>
 <nav  data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 <!--heading Area-->
-<div class="container-fluid  form-Border">
-    <div class="row text-center formManagement border-info">
+<div class="container-fluid    ">
+    <div class="row text-center   ">
         <!--New Customer Button-->
         <div class="col text-left">
             <a href="/home" id="btnHome" class="btn" tabindex="">
@@ -56,8 +56,9 @@
         <div class="col"></div>
     </div>
 </div>
+
 <!--Customers List-->
-<div class="container-fluid bg-primary text-center">
+<div class="container-fluid text-center">
     <!--Table view-->
     <div class="col">
         <div class="col" id="customerListPresent"  data-th-if="${not #lists.isEmpty(customers)}">
@@ -123,6 +124,7 @@
         </div>
     </div>
 </div>
+
 <!--footer include-->
 <div  data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
