--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en"   >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
 </head >
@@ -7,8 +7,8 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 
-<div class="container  form-Border" >
-  <div class="row text-center formManagement border-info" >
+<div class="container    " >
+  <div class="row text-center   " >
     <div class="col" >
       <a class="btn btn-outline-info" href="/home" >
         Back To Home
@@ -32,7 +32,7 @@
   </div >
 </div >
 <!--Form Content - start -->
-<div class="container-fluid bg-light formBorder" >
+<div class="container-fluid bg-light    " >
   <div class="col-sm-12 flex-column " >
     <form id="form" class="form-horizontal" data-th-action="${addStatus==true?'/employee/save':'/employee/update'}"
           data-th-object="${employee}" method="POST" enctype="multipart/form-data" >
@@ -345,6 +345,10 @@
           </div >
         </div >
         <div class="form-group col-md-12 col-sm-12 text-left flex-column " >
+          <!--Back Button-->
+          <a class="btn btn-dark"  tabindex="10" href="/employee">
+            <i class="fas fa-arrow-circle-left" style="font-size: 20px"></i>&nbsp;&nbsp;Back
+          </a>
           <!--Button-->
           <div class="form-group col-md-12 col-sm-12 text-center flex-column " >
             <button class="btn btn-success" type="submit" tabindex="21" >
