--- a/src/main/resources/templates/report/allReport.html
+++ b/src/main/resources/templates/report/allReport.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <link data-th-href="@{/css/customerCss.css}" media="all" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8" >
@@ -9,7 +9,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 <!--heading Area-->
 <div class="container-fluid" >
-  <div class="row text-center formManagement border-info" >
+  <div class="row text-center   " >
     <!--New Customer Button-->
     <div class="col text-left" >
       <a href="/home" id="btnHome" class="btn" tabindex="" >
@@ -21,25 +21,8 @@
                                                              Home
       </a >
     </div >
-    <!--List Name-->
-    <!--<div class="col">
-        <h2 class="text-white text-center">
-            <strong>
-                Customer List
-            </strong>
-        </h2>
-    </div>-->
-    <!--Home Button-->
     <div class="col text-right" >
 
-      <a class="btn" href="/payment/add" id="btnAdd" tabindex="1" >
-        <span ></span >
-        <span ></span >
-        <span ></span >
-        <span ></span >
-        <i class="fas fa-plus" style="font-size: 20px" ></i >&nbsp;&nbsp;
-                                                             Add New
-      </a >
     </div >
   </div >
   <div class="row text-center" >
@@ -90,7 +73,7 @@
   <!--allNotPaidServiceTypeAndCounts-->
   <div class="container" data-th-if="${not #lists.isEmpty(paidServiceTypeAndCounts)}" >
     <div class="container text-center" >
-      <h3 >Paid Service Type And Vehicle Count </h3 >
+      <h4 >Paid Service Type And Vehicle Count </h4 >
     </div >
     <table class="table table-striped table-inverse table-responsive" >
       <thead class="thead-inverse" >
@@ -112,7 +95,7 @@
   <!--paymentTypeCountAndTotalAmounts-->
   <div class="container" data-th-if="${not #lists.isEmpty(paymentTypeCountAndTotalAmounts)}" >
     <div class="container text-center" >
-      <h3 >Paid Payments </h3 >
+      <h4 >Paid Payments </h4 >
     </div >
     <table class="table table-striped table-inverse table-responsive" >
       <thead class="thead-inverse" >
@@ -142,7 +125,7 @@
   <!--allNotPaidServiceTypeAndCounts-->
   <div class="container" data-th-if="${not #lists.isEmpty(allNotPaidServiceTypeAndCounts)}" >
     <div class="container text-center" >
-      <h3 >Not Paid Service Type And Vehicle Count </h3 >
+      <h4 >Not Paid Service Type And Vehicle Count </h4 >
     </div >
     <table class="table table-striped table-inverse table-responsive" >
       <thead class="thead-inverse" >
@@ -164,7 +147,7 @@
   <!--allNotPaidTypeCountAndTotalAmounts-->
   <div class="container" data-th-if="${not #lists.isEmpty(allNotPaidTypeCountAndTotalAmounts)}" >
     <div class="container text-center" >
-      <h3 >Not Paid Payments </h3 >
+      <h4 >Not Paid Payments </h4 >
     </div >
     <table class="table table-striped table-inverse table-responsive" >
       <thead class="thead-inverse" >
@@ -194,7 +177,7 @@
   <!--allCancelPaidServiceTypeAndCounts-->
   <div class="container" data-th-if="${not #lists.isEmpty(allCancelPaidServiceTypeAndCounts)}" >
     <div class="container text-center" >
-      <h3 >Cancel Service Type And Vehicle Count </h3 >
+      <h4 >Cancel Service Type And Vehicle Count </h4 >
     </div >
     <table class="table table-striped table-inverse table-responsive" >
       <thead class="thead-inverse" >
@@ -216,7 +199,7 @@
   <!--allCancelTypeCountAndTotalAmounts-->
   <div class="container" data-th-if="${not #lists.isEmpty(allCancelTypeCountAndTotalAmounts)}" >
     <div class="container text-center" >
-      <h3 >Cancel Payments </h3 >
+      <h4 >Cancel Payments </h4 >
     </div >
     <table class="table table-striped table-inverse table-responsive" >
       <thead class="thead-inverse" >
@@ -245,16 +228,16 @@
 <div class="container-fluid text-center" >
   <!--accordingToUserAllDetails-->
   <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetails)}" >
-    <div class="container-fluid" data-th-each="accordingToUserAllDetail : ${accordingToUserAllDetails}">
+    <div class="container-fluid" data-th-each="accordingToUserAllDetail : ${accordingToUserAllDetails}" >
       <div class="container text-center" >
-        <h3 >Employee Name : <span data-th-text="${accordingToUserAllDetail.employeeName}"></span></h3 >
+        <h4 data-th-text="${accordingToUserAllDetail.employeeName}" ></h4 >
       </div >
       <!--payment List not paid-->
       <div class="container-fluid text-center" >
         <!--allNotPaidServiceTypeAndCounts-->
         <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.paidServiceTypeAndCounts)}" >
           <div class="container text-center" >
-            <h3 >Paid Service Type And Vehicle Count </h3 >
+            <h4 >Paid Service Type And Vehicle Count </h4 >
           </div >
           <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
@@ -274,9 +257,10 @@
           </table >
         </div >
         <!--paymentTypeCountAndTotalAmounts-->
-        <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.paymentTypeCountAndTotalAmounts)}" >
+        <div class="container"
+             data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.paymentTypeCountAndTotalAmounts)}" >
           <div class="container text-center" >
-            <h3 >Paid Payments </h3 >
+            <h4 >Paid Payments </h4 >
           </div >
           <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
@@ -304,9 +288,10 @@
       </div >
       <div class="container-fluid text-center" >
         <!--allNotPaidServiceTypeAndCounts-->
-        <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allNotPaidServiceTypeAndCounts)}" >
+        <div class="container"
+             data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allNotPaidServiceTypeAndCounts)}" >
           <div class="container text-center" >
-            <h3 >Not Paid Service Type And Vehicle Count </h3 >
+            <h4 >Not Paid Service Type And Vehicle Count </h4 >
           </div >
           <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
@@ -326,9 +311,10 @@
           </table >
         </div >
         <!--allNotPaidTypeCountAndTotalAmounts-->
-        <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allNotPaidTypeCountAndTotalAmounts)}" >
+        <div class="container"
+             data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allNotPaidTypeCountAndTotalAmounts)}" >
           <div class="container text-center" >
-            <h3 >Not Paid Payments </h3 >
+            <h4 >Not Paid Payments </h4 >
           </div >
           <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
@@ -356,9 +342,10 @@
       </div >
       <div class="container-fluid text-center" >
         <!--allCancelPaidServiceTypeAndCounts-->
-        <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allCancelPaidServiceTypeAndCounts)}" >
+        <div class="container"
+             data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allCancelPaidServiceTypeAndCounts)}" >
           <div class="container text-center" >
-            <h3 >Cancel Service Type And Vehicle Count </h3 >
+            <h4 >Cancel Service Type And Vehicle Count </h4 >
           </div >
           <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
@@ -378,9 +365,10 @@
           </table >
         </div >
         <!--allCancelTypeCountAndTotalAmounts-->
-        <div class="container" data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allCancelTypeCountAndTotalAmounts)}" >
+        <div class="container"
+             data-th-if="${not #lists.isEmpty(accordingToUserAllDetail.allCancelTypeCountAndTotalAmounts)}" >
           <div class="container text-center" >
-            <h3 >Cancel Payments </h3 >
+            <h4 >Cancel Payments </h4 >
           </div >
           <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
@@ -406,7 +394,7 @@
           </table >
         </div >
       </div >
-    </div>
+    </div >
   </div >
 </div >
 
