--- a/src/main/resources/templates/serviceType/serviceType-detail.html
+++ b/src/main/resources/templates/serviceType/serviceType-detail.html
@@ -1,87 +1,94 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head  data-th-replace="~{fragments/header :: headerFragment}">
-    <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
-</head>
-<body>
-<nav  data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+<html lang="en" >
+<head data-th-replace="~{fragments/header :: headerFragment}" >
+  <meta charset="UTF-8" >
+  <title >Thymeleaf Springboot </title >
+</head >
+<body >
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="container-fluid bg-secondary form-Border">
-    <div class="row text-center formManagement border-info">
-        <div class="col">
-            <a class="btn btn-primary" href="/home">
-                <i class="fa fa-home" style="font-size: 20px"></i> &nbsp; Home
-            </a>
-        </div>
-        <div class="col">
-            <h4 class="text-light text-center">
-                <strong>
-                    <p  data-th-text="${serviceTypeDetail.name}"></p>
-                </strong>
-            </h4>
-        </div>
-        <div class="col">
-            <a href="/employee" class="btn btn-primary">
-                <i class="fa fa-list"></i>&nbsp; View List
-            </a>
-        </div>
-    </div>
-</div>
-<div class="wrapper"><!-- wrapper start -->
+<div class="container-fluid  " >
+  <div class="row text-center   " >
+    <div class="col" >
+      <a class="btn btn-primary" href="/home" >
+        <i class="fa fa-home" style="font-size: 20px" ></i > &nbsp; Home
+      </a >
+    </div >
+    <div class="col" >
+      <h4 class="text-light text-center" >
+        <strong >
+          <p data-th-text="${serviceTypeDetail.name}" ></p >
+        </strong >
+      </h4 >
+    </div >
+    <div class="col" >
+      <a href="/employee" class="btn btn-primary" >
+        <i class="fa fa-list" ></i >&nbsp; View List
+      </a >
+    </div >
+  </div >
+</div >
+<div class="wrapper" ><!-- wrapper start -->
 
-    <div class="content-wrapper"><!-- content-wrapper Start -->
+  <div class="content-wrapper" ><!-- content-wrapper Start -->
 
-        <div class="content-header">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="row">
+    <div class="content-header" >
+      <div class="container-fluid" >
+        <div class="row" >
+          <div class="col-md-12" >
+            <div class="row" >
 
-                            <div class="col-md-12">
-                                <div class="card">
-                                    <div class="card-body">
+              <div class="col-md-12" >
+                <div class="card" >
+                  <div class="card-body" >
 
-                                        <div class="container-fluid" data-th-fragment="serviceTypeDetail">
-                                            <div class="form-group row">
-                                                <label class="col-sm-2 col-form-label "> Id :</label>
-                                                <div class="col-sm-10">
-                                                    <p class="display_detail" data-th-text="${serviceTypeDetail.id}"></p>
-                                                </div>
-                                            </div>
+                    <div class="container-fluid" data-th-fragment="serviceTypeDetail" >
+                      <div class="form-group row" >
+                        <label class="col-sm-2 col-form-label " > Id :</label >
+                        <div class="col-sm-10" >
+                          <p class="display_detail" data-th-text="${serviceTypeDetail.id}" ></p >
+                        </div >
+                      </div >
 
-                                            <div class="form-group row">
-                                                <label class="col-sm-2 col-form-label ">Service Type Name :</label>
-                                                <div class="col-sm-10">
-                                                    <p class="display_detail" data-th-text="${serviceTypeDetail.name}"></p>
-                                                </div>
-                                            </div>
+                      <div class="form-group row" >
+                        <label class="col-sm-2 col-form-label " >Service Type Name :</label >
+                        <div class="col-sm-10" >
+                          <p class="display_detail" data-th-text="${serviceTypeDetail.name}" ></p >
+                        </div >
+                      </div >
 
-
-                                            <div class="form-group row">
-                                                <label class="col-sm-2 col-form-label "> Service Type Parameter
-                                                                                         :</label>
-                                                <div class="col-sm-10">
-                                                    <ol>
-                                                        <li data-th-each="serviceTypeParameter : ${serviceTypeDetail.serviceTypeParameters}"
-                                                            data-th-text="${serviceTypeParameter.name}"></li>
-                                                    </ol>
-                                                </div>
-                                            </div>
-                                        </div>
+                      <div class="form-group row" >
+                        <label class="col-sm-2 col-form-label " >Vehicle Model :</label >
+                        <div class="col-sm-10" >
+                          <p class="display_detail" data-th-text="${serviceTypeDetail.vehicleModel.vehicleModel}" ></p >
+                        </div >
+                      </div >
 
 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!-- content-wrapper end -->
-        <div  data-th-replace="~{fragments/footer :: footerFragment}"></div><!-- footer Section -->
-    </div><!-- wrapper end -->
-    <div  data-th-replace="~{fragments/script :: scriptFragment}"></div><!-- script Fragment -->
-</div>
-</body>
-</html>
+                      <div class="form-group row" >
+                        <label class="col-sm-2 col-form-label " > Service Type Parameter
+                                                                  :</label >
+                        <div class="col-sm-10" >
+                          <ol >
+                            <li data-th-each="serviceTypeParameter : ${serviceTypeDetail.serviceTypeParameters}"
+                                data-th-text="${serviceTypeParameter.name}" ></li >
+                          </ol >
+                        </div >
+                      </div >
+                    </div >
+
+
+                  </div >
+                </div >
+              </div >
+            </div >
+          </div >
+        </div >
+      </div >
+    </div ><!-- content-wrapper end -->
+    <div data-th-replace="~{fragments/footer :: footerFragment}" ></div ><!-- footer Section -->
+  </div ><!-- wrapper end -->
+  <div data-th-replace="~{fragments/script :: scriptFragment}" ></div ><!-- script Fragment -->
+</div >
+</body >
+</html >
