--- a/src/main/resources/templates/serviceType/serviceType.html
+++ b/src/main/resources/templates/serviceType/serviceType.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en"   >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <link data-th-href="@{/css/serviceTypeCss.css}" media="all" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8" >
@@ -8,8 +8,8 @@
 <body >
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="container-fluid form-Border" >
-  <div class="row text-center formManagement border-info" >
+<div class="container-fluid   " >
+  <div class="row text-center   " >
     <div class="col text-left" >
       <a href="/home" id="btnHome" class="btn" >
         <span ></span >
@@ -56,7 +56,8 @@
       <tr >
         <th >S No</th >
         <th > Name</th >
-        <th >Interview Parameter</th >
+        <th >Service Type Parameter</th >
+        <th >Vehicle Model</th >
         <th >Modify</th >
       </tr >
       </thead >
@@ -71,6 +72,7 @@
           </ol >
         </th >
 
+        <th data-th-text="${serviceType.vehicleModel.vehicleModel}" ></th >
 
         <th >
           <a id="serviceTypeView" class="btn btn-success btn-sm" data-th-href="${'/serviceType/' + serviceType.id}" ><i
