--- a/src/main/resources/templates/serviceTypeParameter/addServiceTypeParameter.html
+++ b/src/main/resources/templates/serviceTypeParameter/addServiceTypeParameter.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en"   >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
@@ -7,15 +7,15 @@
 <body >
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="container-fluid bg-secondary form-Border" >
-  <div class="row text-center formManagement border-info" >
+<div class="container-fluid  " >
+  <div class="row text-center   " >
     <div class="col" >
       <a class="btn btn-primary" href="/home" >
         <i class="fa fa-home" style="font-size: 20px" ></i > &nbsp; Home
       </a >
     </div >
     <div class="col" >
-      <h4 class="text-light text-center" >
+         <h4 class="text-center" >
         <strong >
           <span data-th-text="${addStatus==false?'New Service Parameter Add':'Update Service Parameter Details'}" ></span >
         </strong >
@@ -43,6 +43,7 @@
         <div class="col-sm-6" >
           <input type="text" class="form-control" data-th-field="*{id}"
                  id="id" readonly >
+          <input type="text" data-th-field="*{liveDead}" hidden >
         </div >
       </div >
 
@@ -104,12 +105,24 @@
         </div >
       </div >
       <div class="form-group row" >
-        <div class="offset-sm-2 col-sm-10" >
-          <button type="submit" class="btn btn-primary" >
-            <i th:class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}" ></i >
-            <span id="submit" data-th-text="${addStatus==false?'Save' : 'Update'}" ></span >
-          </button >
-        </div >
+        <div class="form-group" id="formButton">
+          <div class=" form-group text-center col-sm-10">
+            <!--Back Button-->
+            <a class="btn btn-dark"  tabindex="10" href="/serviceTypeParameter">
+              <i class="fas fa-arrow-circle-left" style="font-size: 20px"></i>&nbsp;&nbsp;Back
+            </a>
+            <!--Save Button-->
+            <button type="submit" class="btn btn-primary">
+              <i data-th-class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}"></i>
+              <span
+                    data-th-text="${addStatus==false?'Save' : 'Update'}"></span>
+            </button>
+            <!--Cancel Button-->
+            <button class="btn btn-warning ml-5" type="reset" tabindex="9">
+              <i class="far fa-times-circle" style="font-size: 20px"></i>&nbsp;&nbsp;Cancel
+            </button>
+          </div>
+        </div>
       </div >
 
     </div >
