--- a/src/main/resources/templates/vehicle/vehicle.html
+++ b/src/main/resources/templates/vehicle/vehicle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"  >
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
@@ -7,8 +7,8 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid form-Border">
-    <div class="row text-center formManagement border-info">
+<div class="container-fluid   ">
+    <div class="row text-center   ">
         <div class="col text-left">
             <a class="btn" id="btnAdd" href="/vehicle/add">
                 <span></span>
@@ -41,7 +41,7 @@
         <div class="col"></div>
     </div>
 </div>
-<div class="container-fluid formBorder">
+<div class="container-fluid    ">
     <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent" data-th-if="${not #lists.isEmpty(vehicles)}">
         <div class="table-responsive">
             <table class="table table-striped table-condensed">
@@ -51,6 +51,7 @@
                     <th> Number</th>
                     <th> Owner name</th>
                     <th> Manufacture Year</th>
+                    <th>Vehicle Model</th>
                     <th > Modify</th>
                 </tr>
                 </thead>
@@ -60,6 +61,7 @@
                     <th data-th-text="${vehicle.number}"></th>
                     <th data-th-text="${vehicle.customer.name}"></th>
                     <th data-th-text="${vehicle.manufacturedYear}"></th>
+                    <th data-th-text="${vehicle.vehicleModel.vehicleModel}"></th>
                     <th >
                         <a data-th-href="${'/vehicle/view/' + vehicle.id}"
                            class="btn btn-primary btn-sm mr-2 p-2">View
