--- a/src/main/resources/templates/vehicleServiceStation/vehicleServiceStation.html
+++ b/src/main/resources/templates/vehicleServiceStation/vehicleServiceStation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
@@ -7,8 +7,8 @@
 <body >
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="container-fluid form-Border" >
-  <div class="row text-center formManagement border-info" >
+<div class="container-fluid   " >
+  <div class="row text-center   " >
     <div class="col text-left" >
       <a class="btn" id="btnAdd" href="/vehicle/add" >
         <span ></span >
@@ -41,7 +41,7 @@
     <div class="col" ></div >
   </div >
 </div >
-<div class="container-fluid formBorder" >
+<div class="container-fluid    " >
   <div class="form-row" >
     <div class="col-md-3 text-center" >
       <a href="/vehicleServiceStationProcess" >
@@ -75,7 +75,9 @@
       </button >
       <div class="collapse mx-auto" id="dataTargetCollapse" >
         <h4 class="text-info" ><b > Custom Search</b ></h4 >
-        <form class="form-inline" data-th-action="${addStatus==false?'/vehicleServiceStationProcess/done/search':'/vehicleServiceStationProcess/paid/search'}" data-th-method="POST" >
+        <form class="form-inline"
+              data-th-action="${addStatus==false?'/vehicleServiceStationProcess/done/search':'/vehicleServiceStationProcess/paid/search'}"
+              data-th-method="POST" >
           <div class="col-4" >
             <label for="startDate" >FROM :
               <input class="form-control" id="startDate" name="startDate" type="date" /></label >
@@ -115,14 +117,24 @@
           <th data-th-text="${vehicle.customer.name}" ></th >
           <th data-th-text="${vehicle.manufacturedYear}" ></th >
           <th data-th-if="${addStatus}" >
-            <a data-th-href="${'/vehicleServiceStationProcess/vehicle/' + vehicle.id}"
-               class="btn btn-primary btn-sm mr-2 p-2" >Do Job
-            </a >
+            <form action="/vehicleServiceStationProcess/vehicle" method="post" >
+              <input type="hidden" data-th-name="${'id'}" data-th-value="${vehicle.id}" >
+              <input type="date" hidden data-th-name="${'form'}"
+                     data-th-value="${#temporals.format(vehicle.createdAt,'yyyy-MM-dd')}" >
+              <input type="date" hidden data-th-name="${'to'}"
+                     data-th-value="${#temporals.format(vehicle.updatedAt,'yyyy-MM-dd')}" >
+              <button type="submit" class="btn btn-primary btn-sm mr-2 p-2" >Do Job</button >
+            </form >
           </th >
           <th data-th-if="${addStatusPayment}" >
-            <a data-th-href="${'/vehicle/view/' + vehicle.id}"
-               class="btn btn-primary btn-sm mr-2 p-2" >Details
-            </a >
+            <form action="/vehicleServiceStationProcess/printView" method="post" >
+              <input type="text" data-th-name="${'id'}" data-th-value="${vehicle.id}" hidden >
+              <input type="date" hidden data-th-name="${'form'}"
+                     data-th-value="${#temporals.format(vehicle.createdAt,'yyyy-MM-dd')}" >
+              <input type="date" hidden data-th-name="${'to'}"
+                     data-th-value="${#temporals.format(vehicle.updatedAt,'yyyy-MM-dd')}" >
+              <button type="submit" class="btn btn-primary btn-sm mr-2 p-2" >Details</button >
+            </form >
           </th >
         </tr >
         </tbody >
